
Datatest Changelog
==================


COMING SOON (0.9.3)
-------------------

* Added unwrap() method to Query class to unwrap single-item sequences
  or sets.


2018-08-08 (0.9.2)
------------------

* Improved data handling features and support for Python 3.7.
* Changed Query class:
    * Added flatten() method to serialize dictionary results.
    * Added to_csv() method to quickly save results as a CSV file.
    * Changed reduce() method to accept "initializer_factory" as
      an optional argument.
    * Changed filter() method to support predicate matching.
* Added True and False as predicates to support "truth value testing" on
  arbitrary objects (to match on truthy or falsy).
* Added ProxyGroup class for performing the same operations on groups of
  objects at the same time (a common need when testing against reference
  data).
* Changed Selector class keyword filtering to support predicate matching.
* Added handling to get_reader() to support datatest's Selector and Result
  objects.
* Fixed get_reader() bug that prevented encoding-fallback recovery when
  reading from StringIO buffers in Python 2.


2018-06-21 (0.9.1)
------------------

* Added impoved docstrings and other documentation.
* Changed bundled pytest plugin to version 0.1.2:
    * Added handling for a 'mandatory' marker to support
      incremental testing (stops session early when a mandatory
      test fails).
    * Added '--ignore-mandatory' option to continue tests
      even when a mandatory test fails.


2018-04-29 (0.9.0)
------------------

* Added a bundled version of the pytest plugin to the base installation.
* Added universal composability for all allowances (using UNION and
  INTERSECTION via "|" and "&" operators).
* Added ``allowed`` factory class to simplify allowance imports.
* Changed is_valid() to valid().
* Changed ValidationError to display differences in sorted order.
* Added Python 2 and 3 compatible get_reader() to quickly load