@@ -357,13 +357,17 @@ def _normalize_deviation_args(lower, upper, msg):
 
     if upper == None:
         tolerance = lower
-        assert tolerance >= 0, ('tolerance should not be negative, '
-                                'for full control of lower and upper '
-                                'bounds, use "lower, upper" syntax')
+        if tolerance < 0:
+            raise ValueError('tolerance should not be negative, '
+                             'for full control of lower and upper '
+                             'bounds, use "lower, upper" syntax')
         lower, upper = -tolerance, tolerance
+
     lower = _make_decimal(lower)
     upper = _make_decimal(upper)
-    assert lower <= upper
+    if lower > upper:
+        raise ValueError('lower must not be greater than upper, got '
+                         '{0} (lower) and {1} (upper)'.format(lower, upper))
     return (lower, upper, msg)
 
 
